--- a/code/corpus_creation/wiki_vector_store.ipynb
+++ b/code/corpus_creation/wiki_vector_store.ipynb
@@ -22,12 +22,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded all_docs from ../data/all_docs_full.pkl\n"
+      "Loaded all_docs from ../data/all_docs_infoboxes_final.pkl\n"
      ]
     }
    ],
    "source": [
-    "pickle_file = \"../data/all_docs_full.pkl\"\n",
+    "pickle_file = \"../data/all_docs_infoboxes_final.pkl\"\n",
     "\n",
     "if os.path.exists(pickle_file):\n",
     "    with open(pickle_file, \"rb\") as f:\n",
@@ -47,14 +47,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of total chunks: 234\n"
+      "Number of total chunks: 35057\n"
      ]
     }
    ],
    "source": [
     "# 3. Now we have all the documents in all_docs\n",
     "# 4. Apply the RecursiveCharacterTextSplitter\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1024, chunk_overlap=128)\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=512, chunk_overlap=56)\n",
     "chunked_docs = text_splitter.split_documents(all_docs)\n",
     "\n",
     "# Check how many chunks we got\n",
@@ -70,9 +70,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yv/gpc5sh7j5k3cls_fv_dpzntc0000gn/T/ipykernel_99086/1084567878.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "/var/folders/yv/gpc5sh7j5k3cls_fv_dpzntc0000gn/T/ipykernel_83012/2597506556.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = HuggingFaceEmbeddings(\n",
-      "Embedding and Building FAISS DB: 100%|██████████| 78/78 [00:09<00:00,  8.56it/s]\n"
+      "Embedding and Building FAISS DB: 100%|██████████| 3506/3506 [10:52<00:00,  5.37it/s]\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
     ")\n",
     "\n",
     "# Define batch size\n",
-    "batch_size = 3  # Adjust based on memory constraints\n",
+    "batch_size = 10  # Adjust based on memory constraints\n",
     "\n",
     "# Calculate total number of batches\n",
     "total_batches = (len(chunked_docs) + batch_size - 1) // batch_size\n",
@@ -109,18 +109,18 @@
     "            faiss_db.merge_from(tmp_db)\n",
     "        \n",
     "        # Update the progress bar\n",
-    "        pbar.update(1)\n",
-    "\n",
-    "# Save the FAISS vector store\n",
-    "faiss_db.save_local(\"../data/faiss_db_full\")"
+    "        pbar.update(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the FAISS vector store\n",
+    "faiss_db.save_local(\"../data/faiss_db_infoboxes_final\")"
+   ]
   }
  ],
  "metadata": {
